--- a/.gitignore
+++ b/.gitignore
@@ -18,18 +18,8 @@ develop-eggs
 lib
 lib64
 
+
 # Installer logs
 pip-log.txt
 
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+venv
